--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,8 @@
 @use './reset.scss';
 
-// .app-container {
-//   padding: 10px;
-// }
+.card-margin {
+  margin: 10px;
+}
 
 // .search-container {
 //   padding: 18px 0 0 10px;
